fixtures/frontend/milestone-2/invalid/cluster-ambient-projection/main.aivi
type NamePair = NamePair Text Text

sig firstName = "Ada"
sig lastName = "Lovelace"

sig broken =
 firstName
  &|> .display
   |> NamePair
